Semi fix overflow + posts

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -12,3 +12,12 @@
 .height-main-container {
     height: calc(100vh - 68px);
 }
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
